src/index.css
html {
    scroll-behavior: smooth;
    font-size: 2.5vh;
}

body {
    margin: 0;
    font-family: Roboto, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    overflow-y: hidden;
    color: white;
}
::-moz-selection {
    /* Code for Firefox */
    background: #0075FF;
}
::selection {
    background: #0075FF;
}

a {
    text-decoration: none;
    cursor: pointer;
}

h1 {
    font-size: 2.5em;
    margin: 0;
}

h2 {
    margin: 0;
}

h3 {
    margin: 0;
}

h4 {
    margin: 0;
}

button {
    border: none;
    background-color: Transparent;
    outline: none;
    color: white;
    cursor: pointer;
    font-size: 1em;
    font-family: inherit;
}

code {
    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

